@@ -16,6 +16,7 @@
 -add mouse wheel event.
 -add vector object.
 -revise mixer processing.
+-add mixer music object.
 
 0.24    2021-04-28
 -revise rect move/inflate args processing.
